--- a/app/src/main/webapp/register.xhtml
+++ b/app/src/main/webapp/register.xhtml
@@ -30,7 +30,8 @@
                         <f:validateLength minimum="7" maximum="25"/>
                         <f:validator validatorId="usernameValidator" />
                     </h:inputText>
-                    <h:messages for="username" styleClass="error-message"/>
+                    <h:messages for="username" styleClass="error-message" />
+                    <h:outputText styleClass="error-message" rendered="#{flash.containsKey('error-message')}" value="#{flash['error-message']}"/>
                 </div>
                 <div class="form-group input-group">
                     <div class="input-group-prepend">
@@ -52,7 +53,6 @@
                     </h:inputSecret>
                     <h:messages for="repeatpassword" styleClass="error-message"/>
                 </div>
-
                 <div class="form-group input-group">
                     <div class="input-group-prepend">
                         <span class="input-group-text"> <i class="fa fa-user"></i> </span>
@@ -79,6 +79,7 @@
 <!--                        <f:validator validatorId="birthdateValidator"/>-->
                         <f:convertDateTime type="date" pattern="dd/MM/yyyy"/>
                     </h:inputText>
+                    <h:messages for="birthdate" styleClass="error-message"/>
                 </div>
                 <div class="form-group input-group">
                     <div class="input-group-prepend">
